--- a/cadastrocidade.html
+++ b/cadastrocidade.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>forms</title>
-    <link rel="stylesheet" href="cadastro1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -19,9 +19,10 @@
     </header>
     <main>
         <div class="container">
+            <h1>Cadastro de Cidades</h1>
             <form action="cadastroCidade.php" method="post">
                 <fieldset>
-                <legend>Cadastro de Cidades</legend>
+                <legend>Dados da Cidade</legend>
                 <div>
                     <label for="nome">Nome:<br></label>
                     <input type="text" name="nome" id="nome">
